Internal: Message: Restoring mail conf about SMTP_UNIQUE_SENDER - refs BT#21613

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,8 @@ parameters:
     locale: '%env(APP_LOCALE)%'
     installed: '%env(APP_INSTALLED)%'
     multiple_access_url: '%env(APP_MULTIPLE_ACCESS_URL)%'
+    smtp_unique_sender: '%env(APP_SMTP_UNIQUE_SENDER)%'
+    smtp_from_email: '%env(APP_SMTP_FROM_EMAIL)%'
     container.dumper.inline_factories: true
     twig:
         form:
