--- a/.env.dist
+++ b/.env.dist
@@ -37,6 +37,9 @@ APP_MULTIPLE_ACCESS_URL=''
 
 GOOGLE_MAPS_API_KEY=''
 
+APP_SMTP_UNIQUE_SENDER=0
+APP_SMTP_FROM_EMAIL=''
+
 #APP_API_PLATFORM_URL='http://localhost/api/' #deprecated
 
 ###< chamilo ###
