Internal: Message: Restoring mail conf about SMTP_FROM_EMAIL and SMTP_FROM_NAME - refs BT#21613

--- a/.env.dist
+++ b/.env.dist
@@ -39,6 +39,7 @@ GOOGLE_MAPS_API_KEY=''
 
 APP_SMTP_UNIQUE_SENDER=0
 APP_SMTP_FROM_EMAIL=''
+APP_SMTP_FROM_NAME=''
 
 #APP_API_PLATFORM_URL='http://localhost/api/' #deprecated
 
