Internal: Move packages/test/mailer.yaml configuration to packages/messenger.yaml - refs BT#21613

--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -6,3 +6,8 @@ when@dev:
     framework:
         mailer:
             dsn: 'null://null'
+
+when@test:
+    framework:
+        mailer:
+            dsn: 'null://null'
