--- a/composer.json
+++ b/composer.json
@@ -95,6 +95,7 @@
         "laminas/laminas-permissions-acl": "~2.8",
         "league/csv": "^9.7",
         "league/glide-symfony": "^2.0",
+        "league/html-to-markdown": "^5.1",
         "league/mime-type-detection": "^1.7",
         "lexik/jwt-authentication-bundle": "^2.20",
         "maennchen/zipstream-php": "^2.1",
