Internal: Message: Send mail when saving inbox message - refs BT#21613

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -91,6 +91,11 @@ services:
         $persistProcessor: '@api_platform.doctrine.orm.state.persist_processor'
         $removeProcessor: '@api_platform.doctrine.orm.state.remove_processor'
 
+    Chamilo\CoreBundle\State\MessageProcessor:
+        bind:
+            $persistProcessor: '@api_platform.doctrine.orm.state.persist_processor'
+            $removeProcessor: '@api_platform.doctrine.orm.state.remove_processor'
+
     Chamilo\CoreBundle\EventSubscriber\AnonymousUserSubscriber:
       tags:
         - name: kernel.event_subscriber
