--- a/composer.json
+++ b/composer.json
@@ -121,6 +121,7 @@
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.4.*",
         "symfony/cache": "6.4.*",
+        "symfony/doctrine-messenger": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/expression-language": "6.4.*",
         "symfony/flex": "^2.4",
