--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -15,6 +15,7 @@ doctrine:
             row_format: DYNAMIC
         types:
             json: Doctrine\DBAL\Types\JsonType
+            json_array: Doctrine\DBAL\Types\JsonType
             uuid: Symfony\Bridge\Doctrine\Types\UuidType
             datetime: SimPod\DoctrineUtcDateTime\UTCDateTimeType
             datetimetz: SimPod\DoctrineUtcDateTime\UTCDateTimeType
