--- a/src/CoreBundle/Resources/config/services.yml
+++ b/src/CoreBundle/Resources/config/services.yml
@@ -103,3 +103,7 @@ services:
 
     Chamilo\CoreBundle\Filter\SocialWallFilter:
         tags: [ 'api_platform.filter' ]
+
+    Chamilo\CoreBundle\Service\PermissionService:
+      arguments:
+        $permissionRelRoleRepository: '@Chamilo\CoreBundle\Repository\PermissionRelRoleRepository'
