Internal: Rename ROLE_RRHH to ROLE_HR and update user.roles migration - refs #5660

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -45,7 +45,7 @@ security:
         ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH] # Admin that can log in as another user.
         ROLE_GLOBAL_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH] # The user that installed the platform.
         ROLE_TEACHER: [ROLE_STUDENT]
-        ROLE_RRHH: [ROLE_TEACHER, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_HR: [ROLE_TEACHER, ROLE_ALLOWED_TO_SWITCH]
         ROLE_QUESTION_MANAGER: [ROLE_STUDENT]
         ROLE_SESSION_MANAGER: [ROLE_STUDENT, ROLE_ALLOWED_TO_SWITCH]
         ROLE_STUDENT_BOSS: [ROLE_STUDENT]
