--- a/.env.test
+++ b/.env.test
@@ -5,14 +5,13 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
-DATABASE_HOST='127.0.0.1'
+DATABASE_HOST='database'
 DATABASE_PORT='3306'
 DATABASE_NAME='chamilo_test'
 DATABASE_USER='root'
-DATABASE_PASSWORD='root'
+DATABASE_PASSWORD='afqc'
 
 APP_INSTALLED='1'
 APP_ENV='test'
 APP_DEBUG='1'
 APP_LOCALE='en_US'
-APP_MULTIPLE_ACCESS_URL=''
