--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -5,7 +5,7 @@ framework:
 when@dev:
     framework:
         mailer:
-            dsn: 'null://null'
+            dsn: '%env(MAILER_DSN)%'
 
 when@test:
     framework:
