--- a/.env.test
+++ b/.env.test
@@ -5,11 +5,11 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
-DATABASE_HOST='database'
+DATABASE_HOST='127.0.0.1'
 DATABASE_PORT='3306'
 DATABASE_NAME='chamilo_test'
 DATABASE_USER='root'
-DATABASE_PASSWORD='afqc'
+DATABASE_PASSWORD='root'
 
 APP_INSTALLED='1'
 APP_ENV='test'
