--- a/src/CoreBundle/Resources/config/listeners.yml
+++ b/src/CoreBundle/Resources/config/listeners.yml
@@ -101,3 +101,8 @@ services:
             - '@translator'
         tags:
             - {name: doctrine.orm.entity_listener, entity_manager: default, lazy: true}
+
+    Chamilo\CoreBundle\Entity\Listener\MessageStatusListener:
+        arguments: [ '@doctrine.orm.entity_manager' ]
+        tags:
+            - { name: doctrine.orm.entity_listener, entity_manager: default, lazy: true }
