Internal: Replace security_key with APP_SECRET and remove $_ENV usage - refs #5702

--- a/.env.dist
+++ b/.env.dist
@@ -59,3 +59,10 @@ JWT_PASSPHRASE=your_secret_passphrase
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
+
+###> chamilo ###
+DB_MANAGER_ENABLED='{{DB_MANAGER_ENABLED}}'
+SOFTWARE_NAME='{{SOFTWARE_NAME}}'
+SOFTWARE_URL='{{SOFTWARE_URL}}'
+DENY_DELETE_USERS='{{DENY_DELETE_USERS}}'
+HOSTING_TOTAL_SIZE_LIMIT='{{HOSTING_TOTAL_SIZE_LIMIT}}'
