Internal: Add basic config to use Google Cloud Storage as a filesystem

--- a/.env.dist
+++ b/.env.dist
@@ -86,3 +86,18 @@ THEME_FALLBACK='{{THEME_FALLBACK}}'
 PACKAGER='{{PACKAGER}}'
 DEFAULT_TEMPLATE='{{DEFAULT_TEMPLATE}}'
 ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE='{{ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE}}'
+
+###> google cloud storage as filesystem ###
+# GOOGLE_STORAGE_CLOUD_PROJECT_ID=''
+# GOOGLE_STORAGE_KEY_FILE_PATH=%kernel.project_dir%/config/storage_keys/project-id-12345678.json
+# GOOGLE_STORAGE_ASSET_BUCKET='assets-bucket-name'
+# GOOGLE_STORAGE_ASSET_PREFIX=''
+# GOOGLE_STORAGE_ASSET_CACHE_BUCKET='assets-cache-bucket-name'
+# GOOGLE_STORAGE_ASSET_CACHE_PREFIX=''
+# GOOGLE_STORAGE_RESOURCE_BUCKET='resources-bucket-name'
+# GOOGLE_STORAGE_RESOURCE_PREFIX=''
+# GOOGLE_STORAGE_RESOURCE_CACHE_BUCKET='resources-cache-bucket-name'
+# GOOGLE_STORAGE_RESOURCE_CACHE_PREFIX=''
+# GOOGLE_STORAGE_THEMES_BUCKET='themes-bucket-name'
+# GOOGLE_STORAGE_THEMES_PREFIX=''
+###< google cloud storage as filesystem ###
