--- a/.env.dist
+++ b/.env.dist
@@ -16,9 +16,9 @@ DATABASE_PASSWORD='{{DATABASE_PASSWORD}}'
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/framework-bundle ###
-APP_ENV='{{APP_ENV}}'
+APP_ENV='dev'
 APP_SECRET='{{APP_SECRET}}'
-APP_DEBUG='{{APP_DEBUG}}'
+APP_DEBUG='1'
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
@@ -29,28 +29,28 @@ APP_INSTALLED='{{APP_INSTALLED}}'
 ## Encrypt method bcrypt/sha1/md5
 APP_ENCRYPT_METHOD='{{APP_ENCRYPT_METHOD}}'
 
-APP_LOCALE='{{APP_LOCALE}}'
+APP_LOCALE='en_US'
 
-APP_CUSTOM_VUE_TEMPLATE='{{APP_CUSTOM_VUE_TEMPLATE}}'
+APP_CUSTOM_VUE_TEMPLATE='0'
 
-GOOGLE_MAPS_API_KEY='{{GOOGLE_MAPS_API_KEY}}'
+GOOGLE_MAPS_API_KEY=''
 
 #APP_API_PLATFORM_URL='http://localhost/api/' #deprecated
 
 ###< chamilo ###
 
 ###> symfony/mailer ###
-MAILER_DSN='{{MAILER_DSN}}'
+MAILER_DSN=sendmail://default
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='{{CORS_ALLOW_ORIGIN}}'
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY='{{JWT_SECRET_KEY}}'
-JWT_PUBLIC_KEY='{{JWT_PUBLIC_KEY}}'
-JWT_PASSPHRASE='{{JWT_PASSPHRASE}}'
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=your_secret_passphrase
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/messenger ###
