Internal: Add APP_ENABLE_API_ENTRYPOINT to enable the API docs page

--- a/.env.dist
+++ b/.env.dist
@@ -35,6 +35,9 @@ APP_CUSTOM_VUE_TEMPLATE='0'
 
 GOOGLE_MAPS_API_KEY=''
 
+# Enable the entryponint /api for API docs
+APP_ENABLE_API_ENTRYPOINT=false
+
 #APP_API_PLATFORM_URL='http://localhost/api/' #deprecated
 
 ###< chamilo ###
