SSO: Allow default authentication params for all URLs - refs BT#21881

--- a/config/authentication.yaml
+++ b/config/authentication.yaml
@@ -2,7 +2,7 @@
 # Access URL Id / authentication method / params
 parameters:
     authentication:
-        1:
+        default:
             generic:
                 enabled: false
                 client_id: ''
