--- a/config/services.yaml
+++ b/config/services.yaml
@@ -117,3 +117,4 @@ cocur_slugify:
 imports:
     - {resource: ../src/CoreBundle/Resources/config/services.yml}
     - {resource: ../src/LtiBundle/Resources/config/services.yml}
+    - {resource: ./hosting_limits.yml}
