Internal: Add variable settings to .env.dist and plugin.yaml import - refs #5316

--- a/.env.dist
+++ b/.env.dist
@@ -69,3 +69,7 @@ SOFTWARE_NAME='{{SOFTWARE_NAME}}'
 SOFTWARE_URL='{{SOFTWARE_URL}}'
 DENY_DELETE_USERS='{{DENY_DELETE_USERS}}'
 HOSTING_TOTAL_SIZE_LIMIT='{{HOSTING_TOTAL_SIZE_LIMIT}}'
+THEME_FALLBACK='{{THEME_FALLBACK}}'
+PACKAGER='{{PACKAGER}}'
+DEFAULT_TEMPLATE='{{DEFAULT_TEMPLATE}}'
+ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE='{{ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE}}'
