--- a/config/services.yaml
+++ b/config/services.yaml
@@ -115,7 +115,8 @@ cocur_slugify:
     lowercase: true
 
 imports:
-    - {resource: ../src/CoreBundle/Resources/config/services.yml}
-    - {resource: ../src/LtiBundle/Resources/config/services.yml}
+    - { resource: ../src/CoreBundle/Resources/config/services.yml }
+    - { resource: ../src/LtiBundle/Resources/config/services.yml }
     - { resource: ./authentication.yaml }
-    - {resource: ./hosting_limits.yml}
+    - { resource: ./hosting_limits.yml }
+    - { resource: ./plugin.yaml }
