Internal: Rename hosting_limits.yml and change default value

--- a/config/plugin.yaml
+++ b/config/plugin.yaml
@@ -2,6 +2,6 @@ parameters:
   plugin_settings:
     default:
       bbb:
-        tool_enable: 'true'
+        tool_enable: true
         host: 'https://www.example.com'
         salt: 'abc123'
