--- a/config/services.yaml
+++ b/config/services.yaml
@@ -118,5 +118,5 @@ imports:
     - { resource: ../src/CoreBundle/Resources/config/services.yml }
     - { resource: ../src/LtiBundle/Resources/config/services.yml }
     - { resource: ./authentication.yaml }
-    - { resource: ./hosting_limits.yml }
+    - { resource: ./hosting_limits.yaml }
     - { resource: ./plugin.yaml }
