--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
         "chamilo/settings-bundle": "1.3.0",
         "clue/graph": "^0.9.2",
         "cocur/slugify": "^4.0",
+        "doctrine/annotations": "*",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-fixtures-bundle": "^3.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
