Security: Prevent directory indexing globally (no reason to enable it for web requests) - refs BT#22085

--- a/.htaccess
+++ b/.htaccess
@@ -126,5 +126,9 @@ RedirectMatch 403 ^/main/inc/lib/javascript/bigupload/files
 </IfModule>
 
 <Files "web.config">
-    Require all denied
+  Require all denied
 </Files>
+
+<IfModule mod_autoindex.c>
+  Options -Indexes
+</IfModule>
