--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "encore production --progress"
   },
   "dependencies": {
-    "@apollo/client": "^3.10.5",
+    "@apollo/client": "^3.11.8",
     "@fancyapps/fancybox": "^3.5.7",
     "@fullcalendar/core": "^5.11.5",
     "@fullcalendar/daygrid": "^5.11.5",
@@ -18,7 +18,7 @@
     "@fullcalendar/vue3": "^5.11.5",
     "@quasar/extras": "^1.11.4",
     "@tinymce/tinymce-vue": "^5.1.1",
-    "@types/lodash": "^4.17.5",
+    "@types/lodash": "^4.17.10",
     "@uppy/audio": "^1.1.9",
     "@uppy/core": "^2.1.10",
     "@uppy/dashboard": "^2.1.4",
@@ -34,13 +34,13 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "alpinejs": "^3.14.1",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "blueimp-file-upload": "^10.32.0",
     "blueimp-load-image": "^5.16.0",
     "bootstrap-daterangepicker": "^3.1.0",
     "bootstrap-select": "^1.13.18",
     "chart.js": "^4.0.0",
-    "colorjs.io": "^0.5.0",
+    "colorjs.io": "^0.5.2",
     "cropper": "^4.1.0",
     "datepair.js": "^0.4.17",
     "dotenv": "^16.4.5",
@@ -51,7 +51,7 @@
     "free-jqgrid": "https://github.com/chamilo/jqGrid.git#commit=725be74a7ea9d3acc896b68b11b0fbdb36105df3",
     "full-icu": "^1.5.0",
     "glob-all": "^3.3.1",
-    "graphql": "^16.8.2",
+    "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "highlight.js": "^11.7.0",
     "hljs": "^6.2.3",
@@ -63,7 +63,7 @@
     "jquery-ui-timepicker-addon": "^1.6.3",
     "jquery-ui-touch-punch": "^0.2.3",
     "js-cookie": "^2.2.1",
-    "jspdf": "^2.5.1",
+    "jspdf": "^2.5.2",
     "jsplumb": "^2.15.6",
     "linkifyjs": "3.0.5",
     "litepicker": "^2.0.12",
@@ -78,19 +78,19 @@
     "mxgraph": "^4.2.2",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "path": "^0.12.7",
-    "pinia": "^2.1.7",
+    "pinia": "^2.2.4",
     "pretty-bytes": "^5.6.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primevue": "^3.52.0",
-    "pwstrength-bootstrap": "3.1.2",
+    "primevue": "^3.53.0",
+    "pwstrength-bootstrap": "3.1.3",
     "qtip2": "3.0.3",
     "quasar": "2.2.2",
     "readmore-js": "^2.2.1",
     "recordrtc": "^5.6.2",
     "select2": "^4.1.0-rc.0",
     "signature_pad": "^3.0.0-beta.4",
-    "sortablejs": "^1.15.2",
+    "sortablejs": "^1.15.3",
     "sweetalert2": "^11.6.15",
     "textcomplete": "^0.18.2",
     "timeago": "^1.6.7",
@@ -98,47 +98,48 @@
     "tinymce": "^5.10.9",
     "video.js": "^7.21.6",
     "vue-flatpickr-component": "^9.0.8",
-    "vue-i18n": "9.13.1",
+    "vue-i18n": "10.0.4",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-perfect-scrollbar": "^0.2.1",
-    "vue-router": "4.3.3",
+    "vue-router": "4.4.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.1.0",
     "vuex-map-fields": "^1.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
     "@mdi/font": "^7.4.47",
-    "@symfony/webpack-encore": "^4.6.1",
-    "@tailwindcss/forms": "^0.5.7",
+    "@symfony/webpack-encore": "^5.0.1",
+    "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.13",
-    "@vue/compiler-sfc": "^3.4.29",
-    "autoprefixer": "^10.4.19",
-    "core-js": "3.37.1",
+    "@tailwindcss/typography": "^0.5.15",
+    "@vue/compiler-sfc": "^3.5.12",
+    "autoprefixer": "^10.4.20",
+    "core-js": "3.38.1",
     "deepmerge": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "8.10.0",
-    "eslint-plugin-vue": "^9.26.0",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-vue": "^9.29.0",
     "file-loader": "^6.2.0",
-    "postcss": "^8.4.38",
-    "postcss-loader": "^7.3.4",
-    "postcss-prefix-selector": "^1.16.1",
-    "prettier": "3.3.2",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
+    "postcss-prefix-selector": "^2.1.0",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "purgecss-webpack-plugin": "^5.0.0",
-    "sass": "^1.77.6",
-    "sass-loader": "^13.3.3",
-    "tailwindcss": "^3.4.4",
+    "sass": "^1.79.5",
+    "sass-loader": "^16.0.2",
+    "tailwindcss": "^3.4.13",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5",
-    "vue": "^3.4.29",
+    "typescript": "^5.6.3",
+    "vue": "^3.5.12",
     "vue-cli-plugin-quasar": "4.0.4",
     "vue-eslint-parser": "^9.4.3",
     "vue-loader": "^17.4.2",
-    "webpack": "^5.92.1",
+    "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
     "webpack-notifier": "^1.15.0"
   },
   "resolutions": {
