--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "@uppy/vue": "^0.4.9",
     "@uppy/webcam": "^2.1.0",
     "@uppy/xhr-upload": "^2.0.7",
-    "@vue/apollo-composable": "^4.0.0-beta.8",
-    "@vue/apollo-option": "4.0.0-beta.5",
+    "@vue/apollo-composable": "^4.2.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "alpinejs": "^3.14.1",
