Vendor: Upgrade eslint + require new plugins and dependencies

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dropzone": "^5.9.3",
     "easy-pie-chart": "^2.1.7",
     "easytimer.js": "^1.3.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "flag-icons": "^6.6.6",
     "free-jqgrid": "https://github.com/chamilo/jqGrid.git#commit=725be74a7ea9d3acc896b68b11b0fbdb36105df3",
     "full-icu": "^1.5.0",
@@ -108,6 +109,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
+    "@eslint/js": "^9.13.0",
     "@mdi/font": "^7.4.47",
     "@symfony/webpack-encore": "^5.0.1",
     "@tailwindcss/forms": "^0.5.9",
@@ -117,10 +119,11 @@
     "autoprefixer": "^10.4.20",
     "core-js": "3.38.1",
     "deepmerge": "^4.3.1",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-vue": "^9.29.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.29.1",
     "file-loader": "^6.2.0",
+    "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "postcss-prefix-selector": "^2.1.0",
