--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,14 @@ parameters:
     secret: '%env(APP_SECRET)%'
     locale: '%env(APP_LOCALE)%'
     installed: '%env(APP_INSTALLED)%'
+    db_manager_enabled: '%env(bool:DB_MANAGER_ENABLED)%'
+    software_name: '%env(SOFTWARE_NAME)%'
+    software_url: '%env(SOFTWARE_URL)%'
+    deny_delete_users: '%env(bool:DENY_DELETE_USERS)%'
+    hosting_total_size_limit: '%env(int:HOSTING_TOTAL_SIZE_LIMIT)%'
+    theme_fallback: '%env(THEME_FALLBACK)%'
+    packager: '%env(PACKAGER)%'
+    default_template: '%env(DEFAULT_TEMPLATE)%'
     container.dumper.inline_factories: true
     twig:
         form:
