Internal: Enable Gedmo/Translatable extension - refs BT#21568 BT#21533

--- a/config/packages/stof_doctrine_extensions.yaml
+++ b/config/packages/stof_doctrine_extensions.yaml
@@ -10,4 +10,4 @@ stof_doctrine_extensions:
             sluggable: true
             softdeleteable: true
             sortable: true
-            translatable: false
+            translatable: true
