Internal: Add API filter to perform match-against searches - refs BT#22036

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -83,6 +83,7 @@ doctrine:
             string_functions:
                 MONTH: DoctrineExtensions\Query\Mysql\Month
                 YEAR: DoctrineExtensions\Query\Mysql\Year
+                MATCH: DoctrineExtensions\Query\Mysql\MatchAgainst
         filters:
             softdeleteable:
                 class: Gedmo\SoftDeleteable\Filter\SoftDeleteableFilter
