Internal: Add entity listener to track deleted resource link

--- a/src/CoreBundle/Resources/config/listeners.yml
+++ b/src/CoreBundle/Resources/config/listeners.yml
@@ -103,3 +103,5 @@ services:
             - {name: doctrine.orm.entity_listener, entity_manager: default, lazy: true}
 
     Chamilo\CoreBundle\EventListener\MessageStatusListener: ~
+
+    Chamilo\CoreBundle\EventListener\ResourceLinkListener: ~
