Vendor: Add d3 as JS dependency

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chart.js": "^4.0.0",
     "colorjs.io": "^0.5.2",
     "cropper": "^4.1.0",
+    "d3": "^7.9.0",
     "datepair.js": "^0.4.17",
     "dotenv": "^16.4.5",
     "dropzone": "^5.9.3",
@@ -113,6 +114,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/d3": "^7",
     "@vue/compiler-sfc": "^3.5.12",
     "autoprefixer": "^10.4.20",
     "core-js": "3.39.0",
