Vendor: Require thenetworg/oauth2-azure

--- a/composer.json
+++ b/composer.json
@@ -155,6 +155,7 @@
         "symfony/yaml": "6.4.*",
         "symfonycasts/reset-password-bundle": "^1.8",
         "szymach/c-pchart": "^3.0",
+        "thenetworg/oauth2-azure": "^2.2",
         "twig/cssinliner-extra": "^3.3",
         "twig/extra-bundle": "^3.0",
         "twig/inky-extra": "^3.3",
