--- a/.htaccess
+++ b/.htaccess
@@ -36,7 +36,7 @@ RewriteRule ^courses/([^/]+)/scorm/(.*)$ main/document/download_scorm.php?doc_ur
 RewriteRule ^courses/([^/]+)/document/certificates/(.*)$ app/courses/$1/document/certificates/$2 [QSA,L]
 # Note : since version 2.4.38-3 of Apache a security fix had a side effect that made redirection with space not to work.
 # To fix this issue we did not have a common syntaxis but it work with one of those 2 options :
-# changing at the end of the following line [QSA,L] for [QSA,L,B=\x20?] or for "[QSA,L,B= ?,BNP]"
+# changing at the end of the following line [QSA,L] for [QSA,L,B=\x20?] or for "[QSA,L,B= ?,BNP]" (with the quotes)
 RewriteRule ^courses/([^/]+)/document/(.*)$ main/document/download.php?doc_url=/$2&cDir=$1 [QSA,L]
 
 # Optimize load of custom per-course icons in courses (avoid download_uploaded_files.php)
@@ -44,13 +44,13 @@ RewriteRule ^courses/([^/]+)/upload/course_home_icons/(.*([\.js|\.css|\.png|\.jp
 # Course upload files
 # Note : since version 2.4.38-3 of Apache a security fix had a side effect that made redirection with space not to work.
 # To fix this issue we did not have a common syntaxis but it work with one of those 2 options :
-# changing at the end of the following line [QSA,L] for [QSA,L,B=\x20?] or for "[QSA,L,B= ?,BNP]"
+# changing at the end of the following line [QSA,L] for [QSA,L,B=\x20?] or for "[QSA,L,B= ?,BNP]" (with the quotes)
 RewriteRule ^courses/([^/]+)/upload/([^/]+)/(.*)$ main/document/download_uploaded_files.php?code=$1&type=$2&file=$3 [QSA,L]
 
 # Rewrite everything in the work folder
 # Note : since version 2.4.38-3 of Apache a security fix had a side effect that made redirection with space not to work.
 # To fix this issue we did not have a common syntaxis but it work with one of those 2 options :
-# changing at the end of the following line [QSA,L] for [QSA,L,B=\x20?] or for "[QSA,L,B= ?,BNP]"
+# changing at the end of the following line [QSA,L] for [QSA,L,B=\x20?] or for "[QSA,L,B= ?,BNP]" (with the quotes)
 RewriteRule ^courses/([^/]+)/work/(.*)$ main/work/download.php?file=work/$2&cDir=$1 [QSA,L]
 
 RewriteRule ^courses/([^/]+)/course-pic85x85.png$ main/inc/ajax/course.ajax.php?a=get_course_image&code=$1&image=course_image_source [QSA,L]
@@ -89,7 +89,7 @@ RewriteRule ^lti/os$ plugin/ims_lti/outcome_service.php [L]
 # Deny direct access to user my files
 # Note : since version 2.4.38-3 of Apache a security fix had a side effect that made redirection with space not to work.
 # To fix this issue we did not have a common syntaxis but it work with one of those 2 options :
-# changing at the end of the following line [QSA,L] for [QSA,L,B=\x20?] or for "[QSA,L,B= ?,BNP]"
+# changing at the end of the following line [QSA,L] for [QSA,L,B=\x20?] or for "[QSA,L,B= ?,BNP]" (with the quotes)
 RewriteRule ^app/upload/users/([^/]+)/([^/]+)/my_files/(.*)$ main/social/download_my_files.php?user_id=$2&file=$3 [QSA,L]
 
 # Deny access
