Vendor: Change repositories for xapi/client and xapi/repository-api

--- a/composer.json
+++ b/composer.json
@@ -86,12 +86,13 @@
         "onelogin/php-saml": "^3.0",
         "paragonie/random-lib": "2.0.0",
         "patchwork/utf8": "~1.2",
-        "php-ffmpeg/php-ffmpeg": "0.5.1",
+        "php-ffmpeg/php-ffmpeg": "^0.5.1",
         "php-http/guzzle6-adapter": "^2.0",
         "php-xapi/client": "0.7.x-dev",
+        "php-xapi/model": "dev-master as v3.1.0",
         "php-xapi/repository-api": "dev-master as 0.3.1",
         "php-xapi/repository-doctrine": "dev-master",
-        "php-xapi/symfony-serializer": "2.1.0 as 2.0",
+        "php-xapi/symfony-serializer": "dev-master as 2.0",
         "phpmailer/phpmailer": "~6.1",
         "phpoffice/phpexcel": "~1.8",
         "phpoffice/phpword": "~0.14",
@@ -187,6 +188,16 @@
         {
             "type": "github",
             "url": "https://github.com/AngelFQC/xapi-symfony-serializer.git",
+            "no-api": true
+        },
+        {
+            "type": "github",
+            "url": "https://github.com/AngelFQC/xapi-client.git",
+            "no-api": true
+        },
+        {
+            "type": "github",
+            "url": "https://github.com/AngelFQC/xapi-repository-api.git",
             "no-api": true
         },
 	    {
