Language: Use parent ISO code + self ID for new sub languages - refs BT#21568

--- a/src/CoreBundle/Resources/config/listeners.yml
+++ b/src/CoreBundle/Resources/config/listeners.yml
@@ -102,6 +102,10 @@ services:
         tags:
             - {name: doctrine.orm.entity_listener, entity_manager: default, lazy: true}
 
+    Chamilo\CoreBundle\Entity\Listener\LanguageListener:
+        tags:
+            - { name: doctrine.orm.entity_listener, entity_manager: default, lazy: true }
+
     Chamilo\CoreBundle\EventListener\MessageStatusListener: ~
 
     Chamilo\CoreBundle\EventListener\ResourceLinkListener: ~
