--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "@fullcalendar/vue3": "^5.11.5",
     "@tinymce/tinymce-vue": "^5.1.1",
     "@types/lodash": "^4.17.13",
-    "@uppy/audio": "^1.1.9",
-    "@uppy/core": "^2.1.10",
-    "@uppy/dashboard": "^2.1.4",
-    "@uppy/drag-drop": "^2.0.7",
-    "@uppy/file-input": "^2.0.6",
-    "@uppy/image-editor": "^1.1.1",
-    "@uppy/locales": "^2.0.9",
-    "@uppy/vue": "^0.4.9",
-    "@uppy/webcam": "^2.1.0",
-    "@uppy/xhr-upload": "^2.0.7",
+    "@uppy/audio": "^2.1.1",
+    "@uppy/core": "^4.4.1",
+    "@uppy/dashboard": "^4.3.1",
+    "@uppy/drag-drop": "^4.1.1",
+    "@uppy/file-input": "^4.1.1",
+    "@uppy/image-editor": "^3.3.1",
+    "@uppy/locales": "^4.5.0",
+    "@uppy/progress-bar": "^4.2.1",
+    "@uppy/vue": "^2.1.1",
+    "@uppy/webcam": "^4.1.1",
+    "@uppy/xhr-upload": "^4.3.2",
     "@vue/apollo-composable": "^4.2.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
