Attendance: Improve attendance tool with Vue & Symfony integration - refs #6048

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -89,6 +89,15 @@ services:
       tags:
         - { name: 'api_platform.state_processor' }
 
+    Chamilo\CoreBundle\State\CAttendanceStateProcessor:
+      arguments:
+        $persistProcessor: '@api_platform.doctrine.orm.state.persist_processor'
+        $entityManager: '@doctrine.orm.entity_manager'
+        $calendarRepo: '@Chamilo\CourseBundle\Repository\CAttendanceCalendarRepository'
+        $requestStack: '@request_stack'
+      tags:
+        - { name: 'api_platform.state_processor' }
+
     Chamilo\CoreBundle\State\ColorThemeStateProcessor:
       bind:
         $persistProcessor: '@api_platform.doctrine.orm.state.persist_processor'
