--- a/src/CoreBundle/Resources/config/listeners.yml
+++ b/src/CoreBundle/Resources/config/listeners.yml
@@ -105,3 +105,9 @@ services:
     Chamilo\CoreBundle\EventListener\MessageStatusListener: ~
 
     Chamilo\CoreBundle\EventListener\ResourceLinkListener: ~
+
+    Chamilo\CoreBundle\EventListener\UserRelCourseVoteListener:
+      tags:
+        - { name: doctrine.orm.entity_listener, event: postPersist, entity_manager: default, lazy: true }
+        - { name: doctrine.orm.entity_listener, event: postUpdate, entity_manager: default, lazy: true }
+
