--- a/config/services.yaml
+++ b/config/services.yaml
@@ -135,6 +135,6 @@ cocur_slugify:
 imports:
     - { resource: ../src/CoreBundle/Resources/config/services.yml }
     - { resource: ../src/LtiBundle/Resources/config/services.yml }
-    - { resource: ./authentication.yaml }
-    - { resource: ./hosting_limits.yaml }
-    - { resource: ./plugin.yaml }
+    - { resource: ./authentication.yaml, ignore_errors: not_found }
+    - { resource: ./hosting_limits.yaml, ignore_errors: not_found }
+    - { resource: ./plugin.yaml, ignore_errors: not_found }
