--- a/.env.dist
+++ b/.env.dist
@@ -19,7 +19,7 @@ DATABASE_PASSWORD='{{DATABASE_PASSWORD}}'
 APP_ENV='dev'
 APP_SECRET='{{APP_SECRET}}'
 APP_DEBUG='1'
-#TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
+TRUSTED_PROXIES=127.0.0.1
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
