Internal: Rename hosting_limits.yaml to settings_overrides.yaml to allow for all settings from the settings table to be set discretely from a file and prevent access to web admins - refs #267

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ var/upload/*
 /main/inc/conf/configuration.php
 
 /config/authentication.yaml
-/config/hosting_limits.yaml
+/config/settings_overrides.yaml
 /config/plugin.yaml
 
 # Home
