Internal: Plugin: Rename Bbb plugin directory

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -43,7 +43,7 @@ $finder = PhpCsFixer\Finder::create()
     ->exclude('public/plugin/buycourses/src/Requests')
     ->exclude('public/plugin/vchamilo/cli')
     ->exclude('public/plugin/pens/lib')
-    ->exclude('public/plugin/bbb/lib')
+    ->exclude('public/plugin/Bbb/lib')
     ->exclude('public/plugin/ims_lti')
     ->exclude('public/plugin/sepe/src/wsse')
     ->exclude('public/plugin/test2pdf/class')
