--- a/.github/workflows/behat.yml
+++ b/.github/workflows/behat.yml
@@ -5,13 +5,13 @@ on: [push, pull_request]
 jobs:
     build:
         name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-24.04
 
         strategy:
             fail-fast: false
             matrix:
                 operating-system: [ubuntu-latest]
-                php-versions: ['8.2']
+                php-versions: ['8.3', '8.4']
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -23,10 +23,12 @@ jobs:
                 sudo apt-get update
                 sudo apt-get install nodejs npm apache2 php${{ matrix.php-versions }} php${{ matrix.php-versions }}-common php${{ matrix.php-versions }}-cli libapache2-mod-php${{ matrix.php-versions }}
                 sudo a2enmod rewrite actions
-                sudo cp -f .github/gh-apache /etc/apache2/sites-available/000-default.conf
+                sudo a2dissite 000-default.conf
+                sudo cp -f ${{ github.workspace }}/.github/gh-apache /etc/apache2/sites-available/000-default.conf
+                sudo a2ensite 000-default.conf
                 sudo chmod 777 -R $HOME
-                cat /etc/apache2/sites-available/000-default.conf
-                sudo service apache2 restart
+                cat /etc/apache2/sites-enabled/000-default.conf
+                #sudo service apache2 restart
                 sudo systemctl restart apache2
 
             - name: Setup PHP, with composer and extensions
@@ -129,7 +131,7 @@ jobs:
             - name: Start mysql service
               run: |
                 sudo /etc/init.d/mysql start
-                sudo systemctl restart apache2
+                #sudo systemctl restart apache2
 
             - name: Check PHP settings
               run: |
@@ -141,6 +143,7 @@ jobs:
               run: |
                  sudo chmod 777 -R ${{ github.workspace }}
                  curl http://localhost/main/install/index.php
+                 tail /var/log/apache2/error.log
 
             - name: Install chamilo
               run: |
