Internal: Rename plugin to Pens plugin

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -42,7 +42,7 @@ $finder = PhpCsFixer\Finder::create()
     ->exclude('public/plugin/BuyCourses/src/Culqi')
     ->exclude('public/plugin/BuyCourses/src/Requests')
     ->exclude('public/plugin/vchamilo/cli')
-    ->exclude('public/plugin/pens/lib')
+    ->exclude('public/plugin/Pens/lib')
     ->exclude('public/plugin/Bbb/lib')
     ->exclude('public/plugin/ims_lti')
     ->exclude('public/plugin/sepe/src/wsse')
