--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -41,7 +41,7 @@ filter:
         - 'public/plugin/BuyCourses/src/paypalfunctions.php'
         - 'public/plugin/BuyCourses/src/Requests.php'
         - 'public/plugin/vchamilo/cli/*'
-        - 'public/plugin/pens/lib/'
+        - 'public/plugin/Pens/lib/'
         - 'public/plugin/Bbb/lib/bbb_api.php'
         - 'public/plugin/ims_lti/OAuthSimple.php'
         - 'public/plugin/sepe/src/wsse/*'
