Internal: Rename plugin to Test2Pdf plugin

--- a/.yamllint_config
+++ b/.yamllint_config
@@ -2,7 +2,7 @@ ignore: |
     assets/*
     .travis.yml
     public/libs/*
-    public/plugin/test2pdf/*
+    public/plugin/Test2Pdf/*
 
 extends: default
 rules:
