CI: Fix new paths for LTI plugin

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -44,7 +44,7 @@ $finder = PhpCsFixer\Finder::create()
     ->exclude('public/plugin/vchamilo/cli')
     ->exclude('public/plugin/Pens/lib')
     ->exclude('public/plugin/Bbb/lib')
-    ->exclude('public/plugin/ims_lti')
+    ->exclude('public/plugin/ImsLti')
     ->exclude('public/plugin/sepe/src/wsse')
     ->exclude('public/plugin/Test2Pdf/class')
     ->exclude('public/plugin/jcapture/src')
