--- a/composer.json
+++ b/composer.json
@@ -94,6 +94,7 @@
         "laminas/laminas-filter": "~2.9",
         "laminas/laminas-permissions-acl": "~2.8",
         "league/csv": "^9.7",
+        "league/flysystem-aws-s3-v3": "^3.29",
         "league/glide-symfony": "^2.0",
         "league/html-to-markdown": "^5.1",
         "league/mime-type-detection": "^1.7",
